objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Attrition_Reason_Code__c</fullName>
        <description>Reason for Forecasted Attrition</description>
        <label>Attrition Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption - Executive sponsorship</fullName>
                </value>
                <value>
                    <fullName>Adoption - Investment for change management &amp; training</fullName>
                </value>
                <value>
                    <fullName>Adoption - Lacking support from Cisco or partner</fullName>
                </value>
                <value>
                    <fullName>Bought more than needed</fullName>
                </value>
                <value>
                    <fullName>Competition - Competitor with aggressive price</fullName>
                </value>
                <value>
                    <fullName>Competition   - Competitor with better capabilities/value</fullName>
                </value>
                <value>
                    <fullName>Customer situation - Lack of sponsorship for Cisco</fullName>
                </value>
                <value>
                    <fullName>Customer situation   - Internal politics</fullName>
                </value>
                <value>
                    <fullName>Customer situation  - Macro Political</fullName>
                </value>
                <value>
                    <fullName>Customer situation - undergoing significant structural/cost changes</fullName>
                    <label>Customer situation - Undergoing significant structural/cost changes</label>
                </value>
                <value>
                    <fullName>Data issue</fullName>
                </value>
                <value>
                    <fullName>LDOS</fullName>
                </value>
                <value>
                    <fullName>Product - missing features</fullName>
                    <label>Product - Missing features</label>
                </value>
                <value>
                    <fullName>Product - Pricing</fullName>
                </value>
                <value>
                    <fullName>Product  - quality</fullName>
                    <label>Product  - Quality</label>
                </value>
                <value>
                    <fullName>Service - Quality</fullName>
                </value>
                <value>
                    <fullName>Service - Pricing</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                    <isActive>false</isActive>
                    <label>Competition</label>
                </value>
                <value>
                    <fullName>Customer not ready</fullName>
                    <isActive>false</isActive>
                    <label>Customer not ready</label>
                </value>
                <value>
                    <fullName>Customer sat</fullName>
                    <isActive>false</isActive>
                    <label>Customer sat</label>
                </value>
                <value>
                    <fullName>DNR</fullName>
                    <isActive>false</isActive>
                    <label>DNR</label>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                    <isActive>false</isActive>
                    <label>Pricing</label>
                </value>
                <value>
                    <fullName>TBD</fullName>
                    <isActive>false</isActive>
                    <label>TBD</label>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                    <isActive>false</isActive>
                    <label>Terminated</label>
                </value>
                <value>
                    <fullName>	LDOS</fullName>
                    <isActive>false</isActive>
                    <label>	LDOS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attrition_Reason__c</fullName>
        <description>Reason for Forecasted Attrition</description>
        <label>Attrition Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Customer not ready</fullName>
                </value>
                <value>
                    <fullName>Customer sat</fullName>
                </value>
                <value>
                    <fullName>DNR</fullName>
                </value>
                <value>
                    <fullName>LDOS</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Entity__c</fullName>
        <description>Business Entity associated with the technology.</description>
        <label>Business Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Opportunity.CloseDate  +  Term_in_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Opportunity.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <label>Data Source Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <label>Deployment No</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_ATR_000s__c</fullName>
        <formula>IF(
	NOT(ISBLANK(Term_in_Months__c)),
	IF(
		AND(Term_in_Months__c&lt;=12,Term_in_Months__c&gt;=0),
		Expected_TCV_000s__c,
		Expected_TCV_000s__c / (Term_in_Months__c/12)),
	0
)</formula>
        <label>Expected ATR ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_ATR__c</fullName>
        <formula>Expected_ATR_000s__c * 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected ATR $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_TCV_000s__c</fullName>
        <label>Expected TCV ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_TCV__c</fullName>
        <formula>Expected_TCV_000s__c * 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected TCV $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expired_ATR__c</fullName>
        <label>Expired ATR $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Net_Price__c</fullName>
        <description>Quote Integration: Extended Net Price of Individual Line items assigned to Opportunity</description>
        <label>Extended Net Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_ATR__c</fullName>
        <label>Forecasted ATR ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_Attrition__c</fullName>
        <formula>Prior_ATR__c-Forecasted_ATR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Attrition ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDOS_ATR__c</fullName>
        <label>LDOS ATR $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Item_ID_Copy__c</fullName>
        <description>Line Item ID</description>
        <formula>CASESAFEID(Id)</formula>
        <label>Line Item ID Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mix__c</fullName>
        <label>Mix %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Line_000s__c</fullName>
        <description>old: Annuals Non-Recurring Line ($000s), Annuals_Non_Recurring_Line_000s</description>
        <formula>IF
( 
 TEXT(Product_Family_Service_Level_Recurring__c) == 'No' || 
 ISBLANK(TEXT(Product_Family_Service_Level_Recurring__c)), 
  Opportunity_Line_Value__c, 
  Opportunity_Line_Value__c - Recurring_Offer_TCV_Line_000s__c
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Recurring Offer line ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expected_Book_Date__c</fullName>
        <description>Opportunity Expected Book Date</description>
        <formula>Opportunity.CloseDate</formula>
        <label>Opportunity Expected Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Value_Dollars__c</fullName>
        <description>Opportunity Line value in whole dollar value.</description>
        <formula>Opportunity_Line_Value__c  * 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Line Value $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Value__c</fullName>
        <description>Opportunity Line value in thousands</description>
        <label>Opportunity Line Value ($000s)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_RecordTypeId__c</fullName>
        <formula>Opportunity.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity RecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <description>Opportunity Status</description>
        <formula>TEXT(Opportunity.Opportunity_Status__c)</formula>
        <label>Opportunity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opty_Services_All_Multiyear__c</fullName>
        <defaultValue>"False"</defaultValue>
        <description>Field to mimic value from opty Services All Multiyear field</description>
        <label>Opty Services All Multiyear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_ATR_000s__c</fullName>
        <formula>Prior_ATR__c/1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior ATR ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_ATR__c</fullName>
        <description>Prior ATR from Contract grouping</description>
        <label>Prior ATR $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_TCV_000s__c</fullName>
        <formula>Prior_TCV__c/1000</formula>
        <label>Prior TCV ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_TCV__c</fullName>
        <description>Prior TCV from contracts</description>
        <label>Prior TCV $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Term__c</fullName>
        <label>Prior Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Product Code</description>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Id_18__c</fullName>
        <description>Product Family Id 18</description>
        <formula>CASESAFEID( Product_Family_Ref__r.Id)</formula>
        <label>Product Family Id 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote Integration: Individual Product Family associated to Line Items and mapped with product family Master list</description>
        <label>Product Family ID</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family_Service_Level_Recurring__c</fullName>
        <description>Product Family/Service  Recurring ?</description>
        <label>Product Family/Service Level Recurring ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_US__c</fullName>
        <description>Quote Integration: Modified Name: As another Product Family got created to enable reporting: Individual Product Family associated to Line Items</description>
        <label>Product Family (OLD)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Quote Integration: Individual Product Family associated to Line Items</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteId__c</fullName>
        <description>Quote Integration: Quote Id associated to integrated BOM</description>
        <externalId>true</externalId>
        <label>Quote ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Offer_ARR_Line_000s__c</fullName>
        <description>Annuals Recurring Line ($000s) 
old 
IF(TEXT(Product_Family_Service_Level_Recurring__c) == 'No' || ISBLANK(TEXT(Product_Family_Service_Level_Recurring__c)), 
  0, 
  IF( Term_in_Months__c &lt; 12,  
    Recurring_Amount_000s__c,      
    (Recurring_Amount_000s__c / Term_in_Months__c )* 12         
  ) 
)</description>
        <formula>IF ( 
   (Product_Code__c == 'Service' &amp;&amp; 
   Opty_Services_All_Multiyear__c == 'True'), 
   0, 
   IF(
      TEXT(Product_Family_Service_Level_Recurring__c) == 'No' || 
      TEXT(Product_Family_Service_Level_Recurring__c) == 'Mixed' || 
      ISBLANK(TEXT(Product_Family_Service_Level_Recurring__c)),
      0,
      IF(
          Term_in_Months__c &lt; 12,
          Recurring_Offer_TCV_Line_000s__c,
         (Recurring_Offer_TCV_Line_000s__c /(Term_in_Months__c/12))
        )
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Offer Annual Line ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Offer_Multi_Year_Line_000s__c</fullName>
        <formula>IF ( 
TEXT(Product_Family_Service_Level_Recurring__c) == 'Mixed',
0,
(Recurring_Offer_TCV_Line_000s__c - Recurring_Offer_ARR_Line_000s__c)
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Multi-Year $</inlineHelpText>
        <label>Recurring Offer Multi-Year Line ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Offer_TCV_Line_000s__c</fullName>
        <description>Recurring Amount ($000s)</description>
        <formula>IF(
 (TEXT(Product_Family_Service_Level_Recurring__c) == 'Mixed') ||
 TEXT(Product_Family_Service_Level_Recurring__c) == 'No' ||
 ISBLANK(TEXT(Product_Family_Service_Level_Recurring__c)) ,
0,
Opportunity_Line_Value__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Offer Line ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Percentage__c</fullName>
        <description>Recurring Percentage</description>
        <label>Recurring %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SalesForce1_Created_Updated__c</fullName>
        <description>This field is used in trigger if technology and services added and updated from mobile we are setting the "SalesForce1_Flag__c" to true for matrics</description>
        <label>SalesForce1 Created Updated</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesForce1_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if an opportunityLineItem record is either editted or created from SalesForce1 mobile app</description>
        <label>SalesForce1 Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <description>Allows users to properly categorizing all of the Services opportunities according to Advanced Services or Technical Services.

Integrated with Rightnow tool changes need to be communicated to doo_support@cisco.com.</description>
        <label>Service Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS-C-Advanced Services Configurable</fullName>
                </value>
                <value>
                    <fullName>AS-F-Advanced Services Fixed</fullName>
                </value>
                <value>
                    <fullName>ASS-Advanced Services Subscription</fullName>
                </value>
                <value>
                    <fullName>AST-Advanced Services Transactional</fullName>
                </value>
                <value>
                    <fullName>Collaborative Services-AS Subscription</fullName>
                </value>
                <value>
                    <fullName>Collaborative Services-AS Transactional</fullName>
                </value>
                <value>
                    <fullName>Collaborative Services-TS Subscription</fullName>
                </value>
                <value>
                    <fullName>Collaborative Services-TS Transactional</fullName>
                </value>
                <value>
                    <fullName>CSS-Consulting Services Subscription</fullName>
                </value>
                <value>
                    <fullName>CST-Consulting Services Transactional</fullName>
                </value>
                <value>
                    <fullName>Partner Brand Services-TS Subscription</fullName>
                </value>
                <value>
                    <fullName>Partner Brand Services-TS Transaction</fullName>
                </value>
                <value>
                    <fullName>TSS-Technical Services Subscription</fullName>
                </value>
                <value>
                    <fullName>TST-Technical Services Transactional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service Level table</description>
        <label>Service Level ID</label>
        <referenceTo>Service_Level__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <description>Used to store type of service (AS/TS) for service type line items.

Integrated with Rightnow tool changes need to be communicated to doo_support@cisco.com.</description>
        <label>Service Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Opp_ID__c</fullName>
        <label>Source Opp ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Opp_Line_Item_ID__c</fullName>
        <label>Source Opp Line Item ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Competitor__c</fullName>
        <description>The Field Captures Competitor at the Technology Level for the Asiapac theatres. Field is visible to the Asiapac and Support Profiles . This is part of ICM Phase 1 release. LOVs are consistent with the existing Competitor LOVs on Opportunity</description>
        <inlineHelpText>Select Primary Competitor for a Technology</inlineHelpText>
        <label>Competitor Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aastra</fullName>
                </value>
                <value>
                    <fullName>ADC</fullName>
                </value>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>Adtran</fullName>
                </value>
                <value>
                    <fullName>Adva</fullName>
                </value>
                <value>
                    <fullName>Advanced Digital Broadcast (ADB)</fullName>
                </value>
                <value>
                    <fullName>Aerohive</fullName>
                </value>
                <value>
                    <fullName>Agere</fullName>
                </value>
                <value>
                    <fullName>Alaxala Networks</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Allied Telesis</fullName>
                </value>
                <value>
                    <fullName>Alvarion</fullName>
                </value>
                <value>
                    <fullName>Ambit</fullName>
                </value>
                <value>
                    <fullName>Amino</fullName>
                </value>
                <value>
                    <fullName>Apresia</fullName>
                </value>
                <value>
                    <fullName>Arista</fullName>
                </value>
                <value>
                    <fullName>Arris</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Atrica</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Avail Media</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Avistar</fullName>
                </value>
                <value>
                    <fullName>B15</fullName>
                </value>
                <value>
                    <fullName>BelAir Networks</fullName>
                </value>
                <value>
                    <fullName>Belden</fullName>
                </value>
                <value>
                    <fullName>BigBand</fullName>
                </value>
                <value>
                    <fullName>BinTec Communications</fullName>
                </value>
                <value>
                    <fullName>Blue coat</fullName>
                </value>
                <value>
                    <fullName>Brocade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_in_Months__c</fullName>
        <description>Term (in Months)</description>
        <label>Term (in Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Attrition_000s__c</fullName>
        <formula>Total_Attrition__c / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attrition ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Attrition__c</fullName>
        <formula>IF(Prior_ATR__c&gt;Expected_ATR__c,Prior_ATR__c - Expected_ATR__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attrition</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Contract_Value_Line_000s__c</fullName>
        <description>TCV at line</description>
        <formula>Recurring_Offer_ARR_Line_000s__c + Recurring_Offer_Multi_Year_Line_000s__c + Non_Recurring_Line_000s__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Value Line ($000s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>